Fixed compilation error for PR issue #271